--- a/pom.xml
+++ b/pom.xml
@@ -82,6 +82,7 @@
         <module>liquibase-dist</module>
         <module>liquibase-extension-examples</module>
         <module>liquibase-extension-testing</module>
+        <module>liquibase-snowflake</module>
     </modules>
 
     <dependencies>
